@@ -655,15 +655,17 @@ mob returns to his or her start room.
 BEHAVIOR_INSTANTDEATH=\
 Behavior   : InstantDeath\n\r\
 Targets    : MOBs, Items, Rooms, Areas\n\r\
-Parameters : min, max ticks, and a percent chance\n\r\
-Example    : min=10 max=20 chance=75\n\r\
+Parameters : mask, min, max ticks, and a percent chance\n\r\
+Example    : min=10 max=20 chance=75 mask="-RACE +ORC"\n\r\
 Description: \n\r\
 According to the timing and percent chance described by the parameters, the \
 item owner with this behavior will be killed.  MOBs and Rooms with this \
 behavior will kill all their inhabitants.  MOBs do not \
 kill until attacked, food when eaten, drinks when sipped \
 items when they are picked up, weapons when they are first wielded, \
-or armor when it is first worn.  Rooms merely need to be entered.
+or armor when it is first worn.  Rooms merely need to be entered. \n\r\
+\n\r\
+<ZAP=spare>
 
 BEHAVIOR_ITEMGENERATOR=\
 Behavior   : ItemGenerator\n\r\
